[package]
name = "winusb-installer"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
tokio = { version = "1.26", features = ["macros", "net", "io-util", "process", "rt", "time"] }
tokio-serde = { version = "0.8", features = ["bincode"] }
tokio-util = { version = "0.7", features = ["compat", "codec"] }
windows = { version = "0.46", features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_SystemServices",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming",
] }

libwdi = { path = "../libwdi-rs" }
